--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mjt-engine/assert",
-  "version": "1.0.0",
+  "version": "2025.1.10-1040",
   "sideEffects": false,
   "description": "assertions module",
   "main": "./dist/index.js",
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typedoc": "^0.27.6"
   }
 }
