--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@mjt-engine/assert",
-  "version": "2025.1.12-1128",
+  "version": "2025.1.19-1221",
   "sideEffects": false,
   "description": "assertions module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "docs": "typedoc src/index.ts",
     "build": "tsc -b",
